[package]
name = "error_spanned_derive"
version = "0.1.0"
authors = ["Mihir Luthra <luthramihir708@gmail.com>"]
edition = "2018"
description = """
Generates wrapper structs and macros around an enum implementing std::error::Error.
Generated macros can be used to add line, file and span info to the enum's error. This is meant
to be used inside proc macro libs.
"""
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.4.0"
proc-macro2 = "1.0.27"
quote = "1.0.9"
syn = "1.0.73"
